# api/lib/entities/users.dto.js
@@ -1,43 +1,41 @@
 const { Joi } = require('koa-joi-router');
 
-/**
- * Fields that can be changed by regular users
- */
-const regularFields = {};
+const {
+  withModifiers,
+  ignoreFields,
+  requireFields,
+  withDefaults,
+} = require('./schema.utils');
 
 /**
- * Fields that cannot be changed by regular users
+ * Base schema
+ * @type import('joi').SchemaLike
  */
-const restrictedFields = {
+const schema = {
   username: Joi.string().min(1),
+  updatedAt: Joi.date(),
+  createdAt: Joi.date(),
+
   fullName: Joi.string().allow(''),
   email: Joi.string().email(),
   isAdmin: Joi.boolean(),
+
   metadata: Joi.object(),
+
+  memberships: Joi.array().items(Joi.object()),
+  historyEntries: Joi.array().items(Joi.object()),
 };
 
 /**
- * Fields that can be changed by admins
+ * Fields that cannot be changed but could be found in request body
  */
-const requiredFields = {
-  fullName: restrictedFields.fullName.required(),
-  email: restrictedFields.email.required(),
-};
-
-/**
- * Fields that cannot be changed but could be found in a request body
- */
-const immutableFields = Object.fromEntries(
-  [
-    'username',
-    'updatedAt',
-    'createdAt',
-    'memberships',
-    'historyEntries',
-  ].map(
-    (field) => [field, Joi.any().strip()],
-  ),
-);
+const immutableFields = [
+  'username',
+  'updatedAt',
+  'createdAt',
+  'memberships',
+  'historyEntries',
+];
 
 /**
  * Fields that can be populated with related items
@@ -49,29 +47,38 @@ const includableFields = [
 ];
 
 /**
- * Schema to be applied when an administrator creates a user
+ * Schema to be applied when an administrator creates a space
  */
-const adminCreateSchema = {
-  ...regularFields,
-  ...restrictedFields,
-  ...requiredFields,
-  ...immutableFields,
-
-  isAdmin: restrictedFields.isAdmin.default(false),
-  metadata: restrictedFields.metadata.default({}),
-};
+const adminCreateSchema = withModifiers(
+  schema,
+  ignoreFields(immutableFields),
+  requireFields(['fullName', 'email']),
+  withDefaults({
+    isAdmin: false,
+    metadata: {},
+  }),
+);
 
 /**
- * Schema to be applied when an administrator updates a user
+ * Schema to be applied when an administrator updates a space
  */
-const adminUpdateSchema = {
-  ...regularFields,
-  ...restrictedFields,
-  ...immutableFields,
-};
+const adminUpdateSchema = withModifiers(
+  schema,
+  ignoreFields(immutableFields),
+);
+
+/**
+ * Schema to be applied when an administrator imports multiple spaces
+ */
+const adminImportSchema = Joi.array().required().items(withModifiers(
+  schema,
+  requireFields(['username']),
+));
 
 module.exports = {
+  schema,
+  includableFields,
   adminCreateSchema: Joi.object(adminCreateSchema).required(),
   adminUpdateSchema: Joi.object(adminUpdateSchema).required(),
-  includableFields,
+  adminImportSchema,
 };
